Committing update to the background image to avoid stretching and applying fix to logo in the beginning by localizing it to the project vs. hosted on wixsite

--- a/themes/hugograyscale/static/css/grayscale.css
+++ b/themes/hugograyscale/static/css/grayscale.css
@@ -124,7 +124,8 @@ a:focus, a:hover {
   padding: 200px 0;
   text-align: center;
   color: white;
-  background: url("../img/intro-bg.jpg") no-repeat bottom center scroll;
+  background: url("../img/intro-bg.jpg") no-repeat center  scroll;
+  background-size: cover;
   background-color: #CCCCFF;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -141,7 +142,8 @@ a:focus, a:hover {
   padding: 0 0;
   text-align: center;
   color: white;
-  background: url("../img/intro-bg.jpg") no-repeat bottom center scroll;
+  background: url("../img/intro-bg.jpg") no-repeat center scroll;
+  background-size: cover;
   background-color: #CCCCFF;
   -webkit-background-size: cover;
   -moz-background-size: cover;
